added review fixes for 41 & 4b

--- a/Bike_Share_Analysis.ipynb
+++ b/Bike_Share_Analysis.ipynb
@@ -198,11 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NYC 13.983333333333333\n",
+      "Chicago 15.433333333333334\n",
+      "Washington 7.123116666666666\n"
+     ]
+    }
+   ],
    "source": [
     "def duration_in_mins(datum, city):\n",
     "\n",
@@ -220,12 +228,12 @@
     "    \"\"\"\n",
     "    duration = 0\n",
     "    # YOUR CODE HERE\n",
-    "    if(city == 'Washington'):\n",
-    "        duration=(int(datum[\"Duration (ms)\"])/1000)/60\n",
+    "    ifcity == 'Washington'):\n",
+    "        duration=(int(datum[\"Duration (ms)\"])/(1000))/60\n",
     "    else:\n",
-    "        duration = (int(datum['tripduration']) % 3600) / 60\n",
+    "        duration = int(datum['tripduration']) / 60\n",
     "    \n",
-    "    #print(city,duration)\n",
+    "    print(city,duration)\n",
     "    return duration\n",
     "\n",
     "\n",
@@ -452,16 +460,14 @@
     "**Question 4a**: Which city has the highest number of trips? Which city has the highest proportion of trips made by subscribers? Which city has the highest proportion of trips made by short-term customers?\n",
     "\n",
     "**Answer**: NYC has Highest number of trips\n",
-    "NYC has highest proportion of trips made by short-term customers\n",
-    "NYC has Highest number of subscriber trips\n"
+    "NYC has highest proportion of trips made by  subscribers\n",
+    "Chicago has highest proportion of trips made by short-term customers\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def number_of_trips(filename):\n",
@@ -487,22 +493,30 @@
     "        # compute total number of rides\n",
     "        n_total = n_subscribers + n_short_term_customers\n",
     "        \n",
+    "        \n",
+    "        subscriber_propotion = (n_subscribers/n_total) * 100\n",
+    "        short_term_customers_propotion = (n_short_term_customers/n_total) * 100\n",
+    "        \n",
+    "        print((n_subscribers, n_short_term_customers, n_total,subscriber_propotion,short_term_customers_propotion))\n",
     "        # return tallies as a tuple\n",
-    "        return(n_subscribers, n_short_term_customers, n_total)"
+    "        return(n_subscribers, n_short_term_customers, n_total,subscriber_propotion,short_term_customers_propotion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(51753, 14573, 66326, 78.0282242257938, 21.971775774206193)\n",
+      "(54982, 17149, 72131, 76.22520136973007, 23.774798630269924)\n",
+      "(245896, 30902, 276798, 88.83590199351151, 11.164098006488485)\n",
       "NYC has Highest number of trips\n",
-      "NYC has highest proportion of trips made by short-term customers\n",
-      "NYC has Highest number of subscriber trips\n"
+      "NYC has highest proportion of trips made by  subscribers\n",
+      "Chicago has highest proportion of trips made by short-term customers\n"
      ]
     }
    ],
@@ -525,22 +539,22 @@
     "else:\n",
     "    print(\"NYC has Highest number of trips\")\n",
     "    \n",
-    "# highest proportion of trips made by  short-term customers\n",
-    "if (Washington[1] >= Chicago[1]) and (Washington[1] >= NYC[1]):\n",
+    "# highest proportion of trips made by  subscribers\n",
+    "if (Washington[3] >= Chicago[3]) and (Washington[3] >= NYC[3]):\n",
+    "    print(\"Washington has highest proportion of trips made by subscribers\")\n",
+    "elif (Chicago[3] >= Washington[3]) and (Chicago[3] >= NYC[3]):\n",
+    "    print(\"Chicago has highest proportion of trips made by  subscribers\")\n",
+    "else:\n",
+    "    print(\"NYC has highest proportion of trips made by  subscribers\")\n",
+    "    \n",
+    "    \n",
+    "# highest proportion of trips made by Customer\n",
+    "if (Washington[4] >= Chicago[4]) and (Washington[4] >= NYC[4]):\n",
     "    print(\"Washington has highest proportion of trips made by short-term customers\")\n",
-    "elif (Chicago[1] >= Washington[1]) and (Chicago[1] >= NYC[1]):\n",
+    "elif (Chicago[4] >= Washington[4]) and (Chicago[4] >= NYC[4]):\n",
     "    print(\"Chicago has highest proportion of trips made by short-term customers\")\n",
     "else:\n",
     "    print(\"NYC has highest proportion of trips made by short-term customers\")\n",
-    "    \n",
-    "    \n",
-    "# highest proportion of trips made by subscriber\n",
-    "if (Washington[0] >= Chicago[0]) and (Washington[0] >= NYC[0]):\n",
-    "    print(\"Washington has Highest number of subscriber trips\")\n",
-    "elif (Chicago[0] >= Washington[0]) and (Chicago[0] >= NYC[0]):\n",
-    "    print(\"Chicago has Highest number of subscriber trips\")\n",
-    "else:\n",
-    "    print(\"NYC has Highest number of subscriber trips\")\n",
     "    \n"
    ]
   },
@@ -560,16 +574,16 @@
     "NYC 13.241114880406245\n",
     "\n",
     "Proportion of rides made in each city are longer than 30 minutes?\n",
-    "Washington = 7189\n",
-    "Chicago = 4977\n",
-    "NYC = 18373\n",
+    "Washington = %10.83888671109369\n",
+    "Chicago = %6.899945931707588\n",
+    "NYC = %6.63769246887622\n",
     "\n",
-    "With the above result we can conclude that NYC Has highest propotion of rides made in each city are longer than 30 minutes\n"
+    "With the above result we can conclude that Washington Has highest propotion of rides made in each city are longer than 30 minutes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -578,9 +592,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Washington 18.93287355913721 7189\n",
-      "Chicago 14.145528968127447 4977\n",
-      "NYC 13.241114880406245 18373\n"
+      "Washington 18.93287355913721 10.83888671109369\n",
+      "Chicago 14.145528968127447 6.899945931707588\n",
+      "NYC 13.241114880406245 6.63769246887622\n"
      ]
     }
    ],
@@ -604,7 +618,7 @@
     "        # initialize count variables\n",
     "        totalTrip = 0\n",
     "        totalNoOfTrips =0;\n",
-    "        propotion_of_rides_greater_than_thirty_mins = 0\n",
+    "        rides_greater_than_thirty_mins = 0\n",
     "        \n",
     "        \n",
     "        # append all the durations to trip list\n",
@@ -614,10 +628,13 @@
     "            totalTrip+= duration\n",
     "            \n",
     "            if(duration > 30):\n",
-    "                propotion_of_rides_greater_than_thirty_mins +=1 \n",
+    "                rides_greater_than_thirty_mins +=1 \n",
     "        \n",
     "        # compute total number of rides\n",
     "        averageTripLength = totalTrip/totalNoOfTrips\n",
+    "        \n",
+    "        #calculate propotion\n",
+    "        propotion_of_rides_greater_than_thirty_mins = (rides_greater_than_thirty_mins/totalNoOfTrips) * 100\n",
     "        \n",
     "        # return tallies as a tuple\n",
     "        print(city,averageTripLength,propotion_of_rides_greater_than_thirty_mins)\n",
@@ -1057,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1083,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
